# rsfff

./: .gitignore  psi.20790.clean  pyproject.toml
checkpoints/h2o_energy/: best.pt
checkpoints/h2o_h3o_eem/: best.pt  e_elem_curves.csv
checkpoints/h2o_h3o_oh_eem/: best.pt
configs/: h2o_energy.yaml  h2o_h3o_charge.yaml  h2o_h3o_eem.yaml  h2o_h3o_oh_eem.yaml  monomer_h2o_h3o_oh.yaml
data/: atomic_reference_states.json  atomic_reference_states_psi4.out  atomic_references.json  diabatic_states.yaml  isolated_species.extxyz  isolated_species_psi4.out
data/labels/: atomic_references_psi4.out  ch4.extxyz  co2.extxyz  h2o.extxyz  h2so4.extxyz  h3o+.extxyz  hf.extxyz  nh3.extxyz  oh-.extxyz
data/mols/: ch4.xyz  co2.xyz  hso4-.xyz  so42-.xyz
data/qc_runs/: reference_dataset.extxyz
data/qc_runs/00_inbox/: h2o.xyz  h2so4.xyz  h3o+.xyz  hf.xyz  nh3.xyz  oh_radical.xyz
data/qc_runs/01_optimized/: ch4.json  ch4.xyz  co2.json  co2.xyz  h2o.json  h2o.xyz  h2so4.json  h2so4.xyz  h3o+.json  h3o+.xyz  hf.json  hf.xyz  hso4-.json  hso4-.xyz  nh3.json  nh3.xyz  oh-.json  oh-.xyz  oh_radical.json  oh_radical.xyz  so42-.json  so42-.xyz
data/qc_runs/02_frequencies/: ch4.npz  co2.npz  h2o.npz  h2so4.npz  h3o+.npz  hf.npz  hso4-.npz  nh3.npz  oh-.npz  oh_radical.npz  so42-.npz
data/qc_runs/03_wigner/: ch4.extxyz  co2.extxyz  h2o.extxyz  h2so4.extxyz  h3o+.extxyz  hf.extxyz  hso4-.extxyz  nh3.extxyz  oh-.extxyz  oh_radical.extxyz  so42-.extxyz
data/qc_runs/04_labeled/: ch4.extxyz  co2.extxyz  h2o.extxyz.partial  h2so4.extxyz.partial
docs/: charge_aware_embedding.md  mixture_of_diabatic_embeddings.md
notebooks/: almo_eda_pyscf.ipynb  diabat_plotting.ipynb  generate_reference_data.ipynb
rsfff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: atomic_reference_states.py  atomic_references.py  charge_diagnostics.py  eem_diagnostics.py  generate_dataset.py  isolated_species.py  psi4_data_generation.py  run_all_labeling.sh  sample_wigner.py  sqe_diagnostics.py
src/: __init__.py
src/features/: __init__.py  equivariant_backend.py  features.py  weighted_bispectrum.py
src/mlip/: __init__.py  charge_embedding.py  charge_model.py  charge_scf.py  diabats.py  eem.py  eem_model.py  heads.py  model.py  monomer.py  reference_states.py  response_heads.py  sqe.py
src/qcgen/: __init__.py  backend.py  compute.py  extxyz.py  pipeline.py  wigner.py
src/train/: __init__.py  config.py  data.py  loss.py  train.py  train_charge.py  train_eem.py  train_monomer.py
tests/: conftest.py  test_data.py  test_eem.py  test_featurizer_charge.py  test_free_atom.py  test_heads.py  test_implicit_diff.py  test_invariance.py  test_monomer_stack.py  test_scf.py  test_sqe.py
