[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rsfff"
version = "0.1.0"
description = "Reactive/short-range fluctuation force field toolkit: GPU-native SOAP/ACE equivariant features and models."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "torch",
    "e3nn",
    "torch-cluster",
    "ase",
]

[project.optional-dependencies]
cue = [
    "cuequivariance>=0.10",
    "cuequivariance-torch>=0.10",
    "cuequivariance-ops-torch-cu12",
]
# Local (CPU) quantum-chemistry backend for rsfff.qcgen. On Colab the GPU stack
# (gpu4pyscf-cuda12x etc.) is installed from the notebook instead. Note: VV10
# (needed by wB97M-V) is built into pyscf; pyscf-dispersion is intentionally not
# pinned here (D3/D4 only, and its current release is broken against new numpy).
qc = [
    "pyscf>=2.14",
    "geometric",
]

[project.scripts]
rsfff-train = "rsfff.train.train:main"
rsfff-train-eem = "rsfff.train.train_eem:main"

[tool.setuptools]
package-dir = { "rsfff" = "src" }
packages = ["rsfff", "rsfff.features", "rsfff.mlip", "rsfff.train", "rsfff.qcgen"]
